[gd_scene load_steps=26 format=3 uid="uid://e40ytarsr77s"]

[ext_resource type="Script" path="res://core/player/entity.gd" id="1_sxr4k"]
[ext_resource type="Texture2D" uid="uid://dwn7yy2fv03e6" path="res://core/player/player_assets/swordman_1.png" id="2_sqa2r"]
[ext_resource type="Texture2D" uid="uid://dxyhtnjbg4veq" path="res://user_interface/ui_assets/progress_bars/Under.png" id="3_lxhkd"]
[ext_resource type="Texture2D" uid="uid://so0qki34syyc" path="res://user_interface/ui_assets/progress_bars/Over.png" id="4_evyur"]
[ext_resource type="Texture2D" uid="uid://d1utwwftyv7ks" path="res://user_interface/ui_assets/progress_bars/Progress.png" id="5_85kte"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vd40e"]
atlas = ExtResource("2_sqa2r")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_20ibe"]
atlas = ExtResource("2_sqa2r")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmeoe"]
atlas = ExtResource("2_sqa2r")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7k2m"]
atlas = ExtResource("2_sqa2r")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yoeq"]
atlas = ExtResource("2_sqa2r")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsbvx"]
atlas = ExtResource("2_sqa2r")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykeyw"]
atlas = ExtResource("2_sqa2r")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_us468"]
atlas = ExtResource("2_sqa2r")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_am0tv"]
atlas = ExtResource("2_sqa2r")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsuxq"]
atlas = ExtResource("2_sqa2r")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p47e"]
atlas = ExtResource("2_sqa2r")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h7ko"]
atlas = ExtResource("2_sqa2r")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjx8w"]
atlas = ExtResource("2_sqa2r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ox2c"]
atlas = ExtResource("2_sqa2r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb7mf"]
atlas = ExtResource("2_sqa2r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty3f6"]
atlas = ExtResource("2_sqa2r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_028k8"]
atlas = ExtResource("2_sqa2r")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ian36"]
atlas = ExtResource("2_sqa2r")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gsd5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd40e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20ibe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmeoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7k2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yoeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsbvx")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykeyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us468")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am0tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsuxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p47e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h7ko")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjx8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ox2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb7mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty3f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_028k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ian36")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_np8il"]
radius = 40.0
height = 144.0

[node name="Entity" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_sxr4k")

[node name="KnightSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -16)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_2gsd5")
animation = &"idle"

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -64.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("3_lxhkd")
texture_over = ExtResource("4_evyur")
texture_progress = ExtResource("5_85kte")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_np8il")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_looped" from="KnightSprite" to="." method="_on_knight_sprite_animation_looped"]
